New SBOL generator.